v0.2 (#65)
- Improve the timeliness of asset collection in the case of multiple accounts
- Collection of abnormal logs and manual cloud account-triggered collection tasks
- Optimized frontend interaction and display for better user experience
- Other bug fixes

- 提升多账号情况下资产采集的时效性
- 回流采集异常日志、支持手动云账号触发采集任务
- 前端交互和展示优化，提升使用体验
- 其他bug修复

---------

Co-authored-by: j3ttt <86825323+j3ttt@users.noreply.github.com>
Co-authored-by: j3ttt <332456691xt@gmail.com>