@@ -26,15 +26,18 @@ import com.alipay.application.service.system.utils.TokenUtil;
 import com.alipay.application.share.request.admin.QueryUserListRequest;
 import com.alipay.application.share.vo.ListVO;
 import com.alipay.application.share.vo.system.UserVO;
+import com.alipay.common.exception.BizException;
 import com.alipay.common.exception.UserNoLoginException;
 import com.alipay.common.exception.UserNotFindException;
 import com.alipay.dao.dto.UserDTO;
+import com.alipay.dao.mapper.InviteCodeMapper;
 import com.alipay.dao.mapper.UserMapper;
+import com.alipay.dao.po.InviteCodePO;
 import com.alipay.dao.po.UserPO;
 import jakarta.annotation.Resource;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.apache.logging.log4j.util.Strings;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.CollectionUtils;
@@ -50,10 +53,9 @@ import java.util.stream.Collectors;
  *@version 1.0
  *@create 2024/6/14 11:38
  */
+@Slf4j
 @Service
 public class UserServiceImpl implements UserService {
-
-    public static final Logger LOGGER = LoggerFactory.getLogger(UserServiceImpl.class);
 
     @Resource
     private TenantService tenantService;
@@ -66,6 +68,9 @@ public class UserServiceImpl implements UserService {
 
     @Resource
     private TenantRepository tenantRepository;
+
+    @Resource
+    private InviteCodeMapper inviteCodeMapper;
 
     @Override
     public void changeUserStatus(Long id, String status) {
@@ -97,11 +102,11 @@ public class UserServiceImpl implements UserService {
         List<UserPO> list = userMapper.findList(userDTO);
 
         List<UserVO> collect = list.stream().map(UserVO::toVo).collect(Collectors.toList());
-        collect.stream().forEach(t -> {
+        collect.forEach(t -> {
             List<Tenant> tenantList = tenantRepository.findList(t.getUserId());
-            if(!CollectionUtils.isEmpty(tenantList)){
-                List<Long> tenantIds = tenantList.stream().map(Tenant::getId).collect(Collectors.toList());
-                t.setTenantIds(StringUtils.join(tenantIds,","));
+            if (!CollectionUtils.isEmpty(tenantList)) {
+                List<Long> tenantIds = tenantList.stream().map(Tenant::getId).toList();
+                t.setTenantIds(StringUtils.join(tenantIds, ","));
             }
         });
 
@@ -149,7 +154,7 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public String login(String userId, String password) {
+    public String login(String userId, String password, String code) {
         User user = userRepository.find(userId, password);
         if (user == null) {
             throw new UserNotFindException("Wrong username or password");
@@ -164,7 +169,22 @@ public class UserServiceImpl implements UserService {
             try {
                 tenantService.joinDefaultTenant(userId);
             } catch (Exception e) {
-                LOGGER.error("Join default tenant failed", e);
+                log.error("Join default tenant failed", e);
+            }
+        }
+
+        if (Strings.isNotBlank(code)) {
+            try {
+                InviteCodePO inviteCodePO = inviteCodeMapper.findOne(code);
+                tenantService.joinUser(userId, inviteCodePO.getTenantId());
+                // switch tenant
+                userRepository.switchTenant(userId, inviteCodePO.getTenantId());
+
+                // update invite code
+                inviteCodePO.setUserId(userId);
+                inviteCodeMapper.updateByPrimaryKeySelective(inviteCodePO);
+            } catch (Exception e) {
+                log.error("Join invite tenant failed", e);
             }
         }
 
@@ -191,7 +211,7 @@ public class UserServiceImpl implements UserService {
         // auto join default tenant
         List<Tenant> tenants = tenantService.joinUserByTenants(userId, tenantIds);
         // update user select tenant
-        if(!CollectionUtils.isEmpty(tenants)){
+        if (!CollectionUtils.isEmpty(tenants)) {
             user.setTenantId(tenants.get(0).getId());
             userRepository.save(user);
         }
@@ -214,7 +234,7 @@ public class UserServiceImpl implements UserService {
         // check tenantId
         if (StringUtils.isNotBlank(tenantIds)) {
             List<Tenant> tenants = tenantService.joinUserByTenants(userId, tenantIds);
-            if(!CollectionUtils.isEmpty(tenants)){
+            if (!CollectionUtils.isEmpty(tenants)) {
                 user.setTenantId(tenants.get(0).getId());
             }
         }
@@ -223,7 +243,7 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public void delete(String userId) {
-        if (userId.equals(User.DEFAULT_USER_ID)){
+        if (userId.equals(User.DEFAULT_USER_ID)) {
             throw new RuntimeException("The default user cannot be deleted");
         }
         User user = userRepository.find(userId);
@@ -248,6 +268,42 @@ public class UserServiceImpl implements UserService {
         user.setPassword(newPassword);
 
         userRepository.save(user);
+    }
+
+    @Transactional(rollbackFor = RuntimeException.class)
+    @Override
+    public void register(String userId, String username, String password, String email, String code) {
+        InviteCodePO inviteCodePO = inviteCodeMapper.findOne(code);
+        if (inviteCodePO == null) {
+            throw new BizException("Invite code is invalid");
+        }
+
+        if (inviteCodePO.getUserId() != null) {
+            throw new BizException("Invite code has been used");
+        }
+
+        this.create(userId, username, password, RoleNameType.user.name(), String.valueOf(inviteCodePO.getTenantId()));
+
+        // update invite code inuse
+        inviteCodePO.setUserId(userId);
+        inviteCodeMapper.updateByPrimaryKeySelective(inviteCodePO);
+
+        // switch tenant
+        userRepository.switchTenant(userId, inviteCodePO.getTenantId());
+    }
+
+    @Override
+    public void joinTenant(String inviteCode, String userId) {
+        InviteCodePO inviteCodePO = inviteCodeMapper.findOne(inviteCode);
+        if (inviteCodePO == null) {
+            throw new BizException("Invite code is invalid");
+        }
+
+        if (inviteCodePO.getUserId() != null) {
+            throw new BizException("Invite code has been used");
+        }
+
+        tenantService.joinUser(userId, inviteCodePO.getTenantId());
     }
 
 }
